// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`代入 3 1`] = `
"{
  \\"name\\": \\"ProgramRoot\\",
  \\"children\\": {
    \\"rules\\": [
      {
        \\"name\\": \\"ProgramRules\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"head\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"rules\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"head\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 1,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 1,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"head\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 5,
                                                                    \\"endOffset\\": 5,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 5,
                                                                    \\"endColumn\\": 5,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"Equal\\": [
                                    {
                                      \\"image\\": \\"=\\",
                                      \\"startOffset\\": 3,
                                      \\"endOffset\\": 3,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 3,
                                      \\"endColumn\\": 3,
                                      \\"tokenTypeIdx\\": 32,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Equal\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"RelationalOperators\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 27,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              28,
                                              29,
                                              30,
                                              31,
                                              32
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"28\\": true,
                                              \\"29\\": true,
                                              \\"30\\": true,
                                              \\"31\\": true,
                                              \\"32\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 32,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              },
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"head\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 11,
                                                                    \\"endOffset\\": 11,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 11,
                                                                    \\"endColumn\\": 11,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"head\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"10\\",
                                                                    \\"startOffset\\": 15,
                                                                    \\"endOffset\\": 16,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 15,
                                                                    \\"endColumn\\": 16,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"LessThan\\": [
                                    {
                                      \\"image\\": \\">\\",
                                      \\"startOffset\\": 13,
                                      \\"endOffset\\": 13,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 13,
                                      \\"endColumn\\": 13,
                                      \\"tokenTypeIdx\\": 31,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"LessThan\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"RelationalOperators\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 27,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              28,
                                              29,
                                              30,
                                              31,
                                              32
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"28\\": true,
                                              \\"29\\": true,
                                              \\"30\\": true,
                                              \\"31\\": true,
                                              \\"32\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 31,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ],
                            \\"LogicalJoinOperators\\": [
                              {
                                \\"image\\": \\"and\\",
                                \\"startOffset\\": 7,
                                \\"endOffset\\": 9,
                                \\"startLine\\": 2,
                                \\"endLine\\": 2,
                                \\"startColumn\\": 7,
                                \\"endColumn\\": 9,
                                \\"tokenTypeIdx\\": 34,
                                \\"tokenType\\": {
                                  \\"name\\": \\"AndOperator\\",
                                  \\"PATTERN\\": {},
                                  \\"CATEGORIES\\": [
                                    {
                                      \\"name\\": \\"LogicalJoinOperators\\",
                                      \\"PATTERN\\": {},
                                      \\"tokenTypeIdx\\": 33,
                                      \\"CATEGORIES\\": [],
                                      \\"categoryMatches\\": [
                                        34,
                                        35
                                      ],
                                      \\"categoryMatchesMap\\": {
                                        \\"34\\": true,
                                        \\"35\\": true
                                      },
                                      \\"isParent\\": true
                                    }
                                  ],
                                  \\"tokenTypeIdx\\": 34,
                                  \\"categoryMatches\\": [],
                                  \\"categoryMatchesMap\\": {},
                                  \\"isParent\\": false
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 18,
                          \\"endOffset\\": 19,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 18,
                          \\"endColumn\\": 19,
                          \\"tokenTypeIdx\\": 44,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 44,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"image\\": \\"v\\",
                          \\"startOffset\\": 21,
                          \\"endOffset\\": 21,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 21,
                          \\"endColumn\\": 21,
                          \\"tokenTypeIdx\\": 11,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 11,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`代入 右辺 数値代入 1`] = `
"{
  \\"name\\": \\"ProgramRoot\\",
  \\"children\\": {
    \\"rules\\": [
      {
        \\"name\\": \\"ProgramRules\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"head\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"rules\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"head\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 1,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 1,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 3,
                          \\"endOffset\\": 4,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 3,
                          \\"endColumn\\": 4,
                          \\"tokenTypeIdx\\": 44,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 44,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 6,
                          \\"endOffset\\": 10,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 6,
                          \\"endColumn\\": 10,
                          \\"tokenTypeIdx\\": 11,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 11,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`代入 右辺 数値演算、代入 1`] = `
"{
  \\"name\\": \\"ProgramRoot\\",
  \\"children\\": {
    \\"rules\\": [
      {
        \\"name\\": \\"ProgramRules\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"head\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"rules\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"head\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 1,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 1,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          },
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"head\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 5,
                                                                    \\"endOffset\\": 5,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 5,
                                                                    \\"endColumn\\": 5,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ],
                                        \\"AdditionOperators\\": [
                                          {
                                            \\"image\\": \\"+\\",
                                            \\"startOffset\\": 3,
                                            \\"endOffset\\": 3,
                                            \\"startLine\\": 2,
                                            \\"endLine\\": 2,
                                            \\"startColumn\\": 3,
                                            \\"endColumn\\": 3,
                                            \\"tokenTypeIdx\\": 21,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Plus\\",
                                              \\"PATTERN\\": {},
                                              \\"CATEGORIES\\": [
                                                {
                                                  \\"name\\": \\"AdditionOperators\\",
                                                  \\"PATTERN\\": {},
                                                  \\"tokenTypeIdx\\": 20,
                                                  \\"CATEGORIES\\": [],
                                                  \\"categoryMatches\\": [
                                                    21,
                                                    22
                                                  ],
                                                  \\"categoryMatchesMap\\": {
                                                    \\"21\\": true,
                                                    \\"22\\": true
                                                  },
                                                  \\"isParent\\": true
                                                }
                                              ],
                                              \\"tokenTypeIdx\\": 21,
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 7,
                          \\"endOffset\\": 8,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 7,
                          \\"endColumn\\": 8,
                          \\"tokenTypeIdx\\": 44,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 44,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 10,
                          \\"endOffset\\": 14,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 10,
                          \\"endColumn\\": 14,
                          \\"tokenTypeIdx\\": 11,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 11,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`代入 右辺 文字列代入 1`] = `
"{
  \\"name\\": \\"ProgramRoot\\",
  \\"children\\": {
    \\"rules\\": [
      {
        \\"name\\": \\"ProgramRules\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"head\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"rules\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"head\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"StringLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"\\\\\\"string\\\\\\"\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 8,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 8,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"StringLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 10,
                          \\"endOffset\\": 11,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 10,
                          \\"endColumn\\": 11,
                          \\"tokenTypeIdx\\": 44,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 44,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 13,
                          \\"endOffset\\": 17,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 13,
                          \\"endColumn\\": 17,
                          \\"tokenTypeIdx\\": 11,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 11,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`代入 右辺 演算子代入 1`] = `
"{
  \\"name\\": \\"ProgramRoot\\",
  \\"children\\": {
    \\"rules\\": [
      {
        \\"name\\": \\"ProgramRules\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"head\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"rules\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"head\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 1,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 1,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            },
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"10\\",
                                                                    \\"startOffset\\": 5,
                                                                    \\"endOffset\\": 6,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 5,
                                                                    \\"endColumn\\": 6,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ],
                                                          \\"TildeToken\\": [
                                                            {
                                                              \\"image\\": \\"~\\",
                                                              \\"startOffset\\": 3,
                                                              \\"endOffset\\": 3,
                                                              \\"startLine\\": 2,
                                                              \\"endLine\\": 2,
                                                              \\"startColumn\\": 3,
                                                              \\"endColumn\\": 3,
                                                              \\"tokenTypeIdx\\": 41,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"TildeToken\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 41,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 8,
                          \\"endOffset\\": 9,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 8,
                          \\"endColumn\\": 9,
                          \\"tokenTypeIdx\\": 44,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 44,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"tail\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 11,
                          \\"endOffset\\": 15,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 11,
                          \\"endColumn\\": 15,
                          \\"tokenTypeIdx\\": 11,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 11,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
